--- a/kaggle/PGS5/PGS5_ep5/4.Experiment_4.ipynb
+++ b/kaggle/PGS5/PGS5_ep5/4.Experiment_4.ipynb
@@ -2,28 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "66a1369e-72f3-4c99-9319-3898f633913b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-05-20 01:15:47.169542: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-05-20 01:15:47.179407: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1747671347.189543   51045 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1747671347.192828   51045 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1747671347.201071   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747671347.201082   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747671347.201083   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1747671347.201084   51045 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-05-20 01:15:47.204127: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sgml, sgutil, sgpp, dproc\n",
     "import pandas as pd\n",
@@ -63,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "d444497a-a5dd-429a-a428-cb5f73e27bee",
    "metadata": {},
    "outputs": [],
@@ -75,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "a7d1985c-30e3-4579-afac-0fb6f90144c7",
    "metadata": {},
    "outputs": [],
@@ -86,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "cce7145f-30ca-4466-8fa9-b0187bfdcb08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0602333072030953, 0.0007964254636918083)"
+       "(np.float64(0.06024029483999867), np.float64(0.0007878547727643804))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,12 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7125da18-23ec-4b39-8d9f-0d280372dd93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.0598861565764261), np.float64(0.00034079646911263864))"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = sgml.cv(df_train, skf, result_lgb1_kf4['hparams'], {**config, 'sp_y': 'duration_bin'}, result_lgb1_kf4['adapter'])\n",
+    "result = sgml.cv(df_train, skf, result_lgb1_kf4['hparams'], \n",
+    "                 {**config, 'sp_y': 'duration_bin'}, result_lgb1_kf4['adapter'])\n",
     "np.mean(result['valid_scores']), np.std(result['valid_scores'])"
    ]
   },
@@ -134,6 +142,75 @@
    "metadata": {},
    "source": [
     "- Kaggler들의 결과와 비교를 위해 5Fold를 기복이 더 적고, Public Score와 유사한 Duration_bin에 대한 계층적 분리를 선택합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9833fa24-3ef7-4450-9778-d872e61afbd6",
+   "metadata": {},
+   "source": [
+    "- 그리고 동일한 입력은 Target의 최소값으로 바꿔어주고 있습니다. 일종의 노이즈 제거 작업으로 보이는데, 효과성을 살펴봅니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "13c96f89-32db-4863-9fe5-0f90073fa061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_data_proc(x, agg_target_min = True):\n",
+    "    if agg_target_min:\n",
+    "        return x.loc[x[target] == x.groupby(X_all)[target].transform('min')]\n",
+    "    else:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "52a2e357-b944-4c33-9bfe-8272cb1e894b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fold:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.059900043608170486), np.float64(0.0003507132513929142))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = sgml.cv(\n",
+    "    df_train, skf, {**result_lgb1_kf4['hparams'], 'train_data_proc_param': {'agg_target_min': True}}, \n",
+    "    {**config, 'sp_y': 'duration_bin', 'train_data_proc': train_data_proc}, result_lgb1_kf4['adapter']\n",
+    ")\n",
+    "np.mean(result['valid_scores']), np.std(result['valid_scores'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "484f37c8-db26-40e1-97a6-f8466c53aa9c",
+   "metadata": {},
+   "source": [
+    "- 효과성이 없습니다."
    ]
   },
   {
@@ -532,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
