--- a/kaggle/PGS4/PGS4_ep9/3. Machine Learning.ipynb
+++ b/kaggle/PGS4/PGS4_ep9/3. Machine Learning.ipynb
@@ -1150,7 +1150,7 @@
     "        'early_stopping': None, 'reduce_lr_on_plateau': None, 'lr_scheduler': None,\n",
     "    }, \n",
     "    'X_cat': X_nn_cat, 'cat': {'handle_unknown': 'use_encoded_value', 'unknown_value': -1, 'encoded_missing_value': -1},\n",
-    "    'X_std': ['model_year'], 'X_std': ['milage', 'displacement2', 'HP2'],\n",
+    "    'X_std': ['model_year', 'milage', 'displacement2', 'HP2'],\n",
     "    'X_ohe': ['accident'], \n",
     "    'ohe': {'drop': 'first', 'sparse_output': False},\n",
     "    'validation_fraction': 0.0,\n",
@@ -1606,7 +1606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
