--- a/kaggle/PGS5/PGS5_ep11/1. Modeling part1.ipynb
+++ b/kaggle/PGS5/PGS5_ep11/1. Modeling part1.ipynb
@@ -23,10 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96795792",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sun9sun9/python312/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import catboost as cb\n",
     "import sgml, sgpp"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d4883d92",
    "metadata": {},
    "outputs": [],
@@ -100,49 +109,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "df91c7b9-90a6-46ef-ba2c-0b93caf26b72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[31mInit signature:\u001b[39m\n",
+       "ShuffleSplit(\n",
+       "    n_splits=\u001b[32m10\u001b[39m,\n",
+       "    *,\n",
+       "    test_size=\u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    train_size=\u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    random_state=\u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       ")\n",
+       "\u001b[31mDocstring:\u001b[39m     \n",
+       "Random permutation cross-validator.\n",
+       "\n",
+       "Yields indices to split data into training and test sets.\n",
+       "\n",
+       "Note: contrary to other cross-validation strategies, random splits\n",
+       "do not guarantee that test sets across all folds will be mutually exclusive,\n",
+       "and might include overlapping samples. However, this is still very likely for\n",
+       "sizeable datasets.\n",
+       "\n",
+       "Read more in the :ref:`User Guide <ShuffleSplit>`.\n",
+       "\n",
+       "For visualisation of cross-validation behaviour and\n",
+       "comparison between common scikit-learn split methods\n",
+       "refer to :ref:`sphx_glr_auto_examples_model_selection_plot_cv_indices.py`\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "n_splits : int, default=10\n",
+       "    Number of re-shuffling & splitting iterations.\n",
+       "\n",
+       "test_size : float or int, default=None\n",
+       "    If float, should be between 0.0 and 1.0 and represent the proportion\n",
+       "    of the dataset to include in the test split. If int, represents the\n",
+       "    absolute number of test samples. If None, the value is set to the\n",
+       "    complement of the train size. If ``train_size`` is also None, it will\n",
+       "    be set to 0.1.\n",
+       "\n",
+       "train_size : float or int, default=None\n",
+       "    If float, should be between 0.0 and 1.0 and represent the\n",
+       "    proportion of the dataset to include in the train split. If\n",
+       "    int, represents the absolute number of train samples. If None,\n",
+       "    the value is automatically set to the complement of the test size.\n",
+       "\n",
+       "random_state : int, RandomState instance or None, default=None\n",
+       "    Controls the randomness of the training and testing indices produced.\n",
+       "    Pass an int for reproducible output across multiple function calls.\n",
+       "    See :term:`Glossary <random_state>`.\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       ">>> import numpy as np\n",
+       ">>> from sklearn.model_selection import ShuffleSplit\n",
+       ">>> X = np.array([[1, 2], [3, 4], [5, 6], [7, 8], [3, 4], [5, 6]])\n",
+       ">>> y = np.array([1, 2, 1, 2, 1, 2])\n",
+       ">>> rs = ShuffleSplit(n_splits=5, test_size=.25, random_state=0)\n",
+       ">>> rs.get_n_splits()\n",
+       "5\n",
+       ">>> print(rs)\n",
+       "ShuffleSplit(n_splits=5, random_state=0, test_size=0.25, train_size=None)\n",
+       ">>> for i, (train_index, test_index) in enumerate(rs.split(X)):\n",
+       "...     print(f\"Fold {i}:\")\n",
+       "...     print(f\"  Train: index={train_index}\")\n",
+       "...     print(f\"  Test:  index={test_index}\")\n",
+       "Fold 0:\n",
+       "  Train: index=[1 3 0 4]\n",
+       "  Test:  index=[5 2]\n",
+       "Fold 1:\n",
+       "  Train: index=[4 0 2 5]\n",
+       "  Test:  index=[1 3]\n",
+       "Fold 2:\n",
+       "  Train: index=[1 2 4 0]\n",
+       "  Test:  index=[3 5]\n",
+       "Fold 3:\n",
+       "  Train: index=[3 4 1 0]\n",
+       "  Test:  index=[5 2]\n",
+       "Fold 4:\n",
+       "  Train: index=[3 5 1 0]\n",
+       "  Test:  index=[2 4]\n",
+       ">>> # Specify train and test size\n",
+       ">>> rs = ShuffleSplit(n_splits=5, train_size=0.5, test_size=.25,\n",
+       "...                   random_state=0)\n",
+       ">>> for i, (train_index, test_index) in enumerate(rs.split(X)):\n",
+       "...     print(f\"Fold {i}:\")\n",
+       "...     print(f\"  Train: index={train_index}\")\n",
+       "...     print(f\"  Test:  index={test_index}\")\n",
+       "Fold 0:\n",
+       "  Train: index=[1 3 0]\n",
+       "  Test:  index=[5 2]\n",
+       "Fold 1:\n",
+       "  Train: index=[4 0 2]\n",
+       "  Test:  index=[1 3]\n",
+       "Fold 2:\n",
+       "  Train: index=[1 2 4]\n",
+       "  Test:  index=[3 5]\n",
+       "Fold 3:\n",
+       "  Train: index=[3 4 1]\n",
+       "  Test:  index=[5 2]\n",
+       "Fold 4:\n",
+       "  Train: index=[3 5 1]\n",
+       "  Test:  index=[2 4]\n",
+       "\u001b[31mFile:\u001b[39m           ~/python312/lib/python3.12/site-packages/sklearn/model_selection/_split.py\n",
+       "\u001b[31mType:\u001b[39m           ABCMeta\n",
+       "\u001b[31mSubclasses:\u001b[39m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ShuffleSplit?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "13acf547",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_split_idx(X, y = None, sp = ShuffleSplit(), sp_v = None, groups = None):\n",
-    "    train_idx_list = list()\n",
-    "    valid_idx_list = list()\n",
-    "    if type(X) == pd.DataFrame:\n",
-    "        idx_func = lambda x: {'X': X.iloc[x], 'y': y.iloc[x] if y is not None else None, 'groups': (groups.iloc[x] if groups is not None else None)}\n",
-    "    else:\n",
-    "        idx_func = lambda x: {'X': X[x], 'y': y[x] if y is not None else None, 'groups': (groups[x] if groups is not None else None)}\n",
-    "    for train_idx, valid_idx in sp.split(X, y, groups = groups):\n",
-    "        if sp_v is not None:\n",
-    "            train_idx_list.append([\n",
-    "                (train_idx[train_v_idx], train_idx[valid_v_idx])\n",
-    "                for train_v_idx, valid_v_idx in sp_v.split(**idx_func(train_idx))\n",
-    "            ])\n",
+    "class CachedSplitter():\n",
+    "    def __init__(X, y = None, sp = ShuffleSplit(n_splits = 1, random_state=1), sp_v = None, groups = None):\n",
+    "        self.train_idx_list = list()\n",
+    "        self.valid_idx_list = list()\n",
+    "        if type(X) == pd.DataFrame:\n",
+    "            idx_func = lambda x: {'X': X.iloc[x], 'y': y.iloc[x] if y is not None else None, 'groups': (groups.iloc[x] if groups is not None else None)}\n",
     "        else:\n",
-    "            train_idx_list.append([\n",
-    "                (train_idx, None)\n",
-    "            ])\n",
-    "        \n",
-    "        valid_idx_list.append(valid_idx)\n",
-    "    return train_idx_list, valid_idx_list\n",
-    "\n",
-    "def split(train_idx_list, valid_idx_list, *args, split_train = True):\n",
-    "    if type(args[0]) in [pd.DataFrame, pd.Series]:\n",
-    "        idx_func = lambda x: (i.iloc[x] for i in args)\n",
-    "    else:\n",
-    "        idx_func = lambda x: (i[x] for i in args)\n",
-    "    if split_train:\n",
-    "        for train_idx_list, valid_idx in zip(train_idx_list, valid_idx_list):\n",
-    "            yield [\n",
-    "                (idx_func(train_idx), None if train_v_idx is None else idx_func(train_v_idx))\n",
-    "                for train_idx, train_v_idx in train_idx_list\n",
-    "            ], idx_func(valid_idx)\n",
-    "    else:\n",
-    "        for train_idx_list, valid_idx in zip(train_idx_list, valid_idx_list):\n",
-    "            yield [\n",
-    "                (idx_func(train_idx) if train_v_idx is None else idx_func(np.hstack([train_idx, train_v_idx])), None)\n",
-    "                for train_idx, train_v_idx in train_idx_list\n",
-    "            ], idx_func(valid_idx)\n",
+    "            idx_func = lambda x: {'X': X[x], 'y': y[x] if y is not None else None, 'groups': (groups[x] if groups is not None else None)}\n",
+    "        for train_idx, valid_idx in sp.split(X, y, groups = groups):\n",
+    "            if sp_v is not None:\n",
+    "                self.train_idx_list.append([\n",
+    "                    (train_idx[train_v_idx], train_idx[valid_v_idx])\n",
+    "                    for train_v_idx, valid_v_idx in sp_v.split(**idx_func(train_idx))\n",
+    "                ])\n",
+    "            else:\n",
+    "                self.train_idx_list.append([\n",
+    "                    (train_idx, None)\n",
+    "                ])\n",
+    "            \n",
+    "            self.valid_idx_list.append(valid_idx)\n",
+    "    \n",
+    "    def split(*args, split_train = True):\n",
+    "        if type(args[0]) in [pd.DataFrame, pd.Series]:\n",
+    "            idx_func = lambda x: (i.iloc[x] for i in args)\n",
+    "        else:\n",
+    "            idx_func = lambda x: (i[x] for i in args)\n",
+    "        if split_train:\n",
+    "            for train_idx_list, valid_idx in zip(train_idx_list, valid_idx_list):\n",
+    "                yield [\n",
+    "                    (idx_func(train_idx), None if train_v_idx is None else idx_func(train_v_idx))\n",
+    "                    for train_idx, train_v_idx in train_idx_list\n",
+    "                ], idx_func(valid_idx)\n",
+    "        else:\n",
+    "            for train_idx_list, valid_idx in zip(train_idx_list, valid_idx_list):\n",
+    "                yield [\n",
+    "                    (idx_func(train_idx) if train_v_idx is None else idx_func(np.hstack([train_idx, train_v_idx])), None)\n",
+    "                    for train_idx, train_v_idx in train_idx_list\n",
+    "                ], idx_func(valid_idx)\n",
     "            \n",
     "def split_and_call(func, train_idx_list, valid_idx_list, *args, split_train = True):\n",
     "    return [\n",
@@ -356,7 +486,10 @@
    "execution_count": 204,
    "id": "a4bf099a",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -606,7 +739,10 @@
    "execution_count": 205,
    "id": "5496133d",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -2293,9 +2429,7 @@
    "cell_type": "code",
    "execution_count": 193,
    "id": "36c37db3",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2940,9 +3074,7 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "7b59b285",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4309,7 +4441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
